--- a/Proyecto CV/css/estilos.css
+++ b/Proyecto CV/css/estilos.css
@@ -8,6 +8,9 @@
 body {
     display: flex;
 }
+h1{
+    padding: auto;
+}
 .contenedor{
     border: 1px solid #ccc;
     margin: 0 auto;
@@ -23,8 +26,12 @@ body {
     display: flex;
 }
 .nombre{
-    margin-left: 40px;
-    width: 100%;
+    margin-left: 50px;
+    width: auto;
+}
+.nombre li {
+    padding: 10px;
+    width: auto;
 }
 .titulo{
     border: 1px solid #0CB1BF;
@@ -45,3 +52,32 @@ a:hover{
     color: red;
 
 }
+li{
+    padding: 10px;
+}
+.read-more-btn {
+    background-color: #0CB1BF;
+    border: none;
+    border-radius: 40px;
+    color: white;
+    padding: 10px 30px;
+    font-size: 0.9em;
+    box-shadow: 0px 0px 10px 0px #0CB1BF;
+    cursor: pointer;
+  }
+  
+  .read-more-btn:hover {
+    box-shadow: none;
+    background-color: black;
+    color: #fff;
+    transition: cubic-bezier(0.075, 0.82, 0.165, 1) 3.05s;
+  }
+  
+   
+  .hideText {
+    display: none;
+  }
+  
+  .showText {
+    display: block;
+  }
